Added more words to About

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: The Tikkun Project
 email: thetikkunline@proton.me
 description: >- # this means to ignore newlines until "baseurl:"
-  A peer support project for people who experience extreme or altered states, non-consensus realities, psychosis, or use other words that best describe their own experiences.
+  The Tikkun Project is a peer support initiative for people who experience extreme or altered states, non-consensus realities, psychosis, or use their own language to describe these ways of being.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: The-Tikkun-Line
